--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,58 @@
 ---
-title: "mikelydeamore.github.io"
+title: "Dr Michael Lydeamore"
+image: images/michael-lydeamore.jpg
+about:
+    id: hero-heading
+    template: trestles
+    image-shape: round
+    links:
+        - icon: twitter
+          text: Twitter
+          href: https://www.twitter.com/MikeLydeamore
+        - icon: linkedin
+          text: LinkedIn
+          href: https://www.linkedin.com/in/michael-lydeamore-4a1b1161/
+        - icon: github
+          text: GitHub
+          href: https://github.com/MikeLydeamore
+        - icon: google
+          text: Scholar
+          href: https://scholar.google.com/citations?user=miNl6rMAAAAJ&hl=en
+        - icon: link
+          text: Monash
+          href: https://research.monash.edu/en/persons/michael-lydeamore
+engine: knitr
+format:
+    html:
+        page-layout: full
 ---
 
-This is a Quarto website.
+::: {#hero-heading}
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+I am a lecturer in Business Analytics and Data Science in the [Department of Econometrics and Business Statistics](https://www.monash.edu/business/econometrics-and-business-statistics) at Monash University. I also hold honorary appointments with [Alfred Health](https://www.alfredhealth.org.au/) and [SaferCare Victoria](https://www.safercare.vic.gov.au/).
+
+I love working on translational and high-impact projects across any industry. If you have a question or a project that you think needs a data-driven approach, please **get in touch** with the details below.
+
+My **research interests** are:
+
+* Health analytics,
+* Healthcare acquired infections,
+* Understanding data collection methods in the healthcare setting,
+* Infectious diseases control,
+* Statistical software development and workflow.
+
+:::
+
+I am an advocate of re-use of historical datasets, and performing analysis in as open of a way as possible while preserving privacy of those whom data has been collected. I have an active GitHub profile which contains most of my research code that can be made publicly available.
+
+I thoroughly enjoy engagement with societies and research centres. I am currently the Treasurer of the Australia and New Zealand Industrial and Applied Mathematics (ANZIAM) society, ECA Chair for the NHRMC Centre of Research Excellence [SPECTRUM](https://www.spectrum.edu.au/), and in a non-academic context, treasurer of the [North Park Tennis Club](https://play.tennis.com.au/NorthParkTennisClub).
+
+
+## Contact
+
+<table class="table table-striped center" style="width:30%">
+<tr><td style="width:5%"><i class="bi bi-twitter"></i></td><td> [@MikeLydeamore](https://twitter.com/MikeLydeamore)</td></tr>
+<tr><td style="width:5%"><i class="bi bi-github"></i></i></td><td> [MikeLydeamore](https://github.com/MikeLydeamore)</td></tr>
+<tr><td style="width:5%"><i class="bi bi-envelope"></i></td><td> [michael.lydeamore@monash.edu](mailto:michael.lydeamore@monash.edu)</td></tr>
+<tr><td style="width:5%"><i class="bi bi-geo-alt-fill"></i></td><td> Monash University<br>29 Ancora Imparo Way<br>Building 6, Room 354<br>Clayton, VIC 3800<br>Australia</td></tr>
+</table>
