--- a/recipes/index.qmd
+++ b/recipes/index.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Recipes"
+description: It's some recipes
 listing:
   contents: .
   sort: "date desc"
@@ -7,9 +8,9 @@ listing:
   categories: true
   sort-ui: false
   filter-ui: false
-  feed: true
 page-layout: full
 title-block-banner: true
+comments: false
 engine: knitr
 ---
 
