--- a/cv/index.qmd
+++ b/cv/index.qmd
@@ -6,7 +6,7 @@ format:
         page-layout: full
         include-after-body: 
             text: |
-                <script src="/assets/aos.js"></script>
+                <script src="../assets/aos.js"></script>
                 <script>
                 AOS.init({
                 anchorPlacement: 'top-left',
@@ -40,7 +40,7 @@ michael.lydeamore@monash.edu
 
 :::
 
-::: {.aos-init .aos-animate}
+::: {.aos-init .aos-animate aos="zoom-out-right"}
 
 ## <i class="bi bi-mortarboard-fill"></i> Education
 
