--- a/recipes/baked-cod-with-herb-crust/index.qmd
+++ b/recipes/baked-cod-with-herb-crust/index.qmd
@@ -24,7 +24,7 @@ Very nice but can dry out the fish.
 * 1 tsp Dijon mustard
 * 1 tbsp ginger
 * Papper
-* 4 fillters firm white fish
+* 4 fillets firm white fish
 
 
 ## Method
