--- a/recipes/lamb-rosemary-pie/index.qmd
+++ b/recipes/lamb-rosemary-pie/index.qmd
@@ -41,8 +41,7 @@ Heat oil in frypan and add the lamb. Cook until well browned. Remove from pan.
 
 Add extra oil and add sliced onion and garlic. Cook until soft. Cube potatoes and carrots. Add to pan cook stirring for 5 minutes or until browned. Add peas, tomato paste, stock powder and gravy powder. Cook stirring for 1 minute.
 
-Return lamb to pan. Add water and worcestershire sauce. Bring t o the boil. Reduce heat and simmer covered for 2 hours. Stir in rosemary and season with salt and pepper.
+Return lamb to pan. Add water and worcestershire sauce. Bring to the boil. Reduce heat and simmer covered for 2 hours. Stir in rosemary and season with salt and pepper.
 Combine water and cornflour. Add to lamb simmer 1 minute. Cool. 
 
-Preheat oven to 200 degrees. Lightly grease pie dish. Line base and side of dish, trimming away excess pastry. Cover with glad bake. Fill with uncooked rice. Bake for 10 minutes. Remove paper and rice. Fill pie case with lamb mixture. Pla ce remaining sheet of pastry over pie. Press edges with a fork to seal. Prick top of pastry and brush with a beaten
-egg. Place on a baking tray and bake for 25–30 mins. Serve.
+Preheat oven to 200 degrees. Lightly grease pie dishes. Fill pie case with lamb mixture. Place remaining sheet of pastry over pie. Press edges with a fork to seal. Prick top of pastry and brush with a beaten egg. Place on a baking tray and bake for 25–30 mins. Serve.
