--- a/recipes/mushroom-buckwheat-risotto/index.qmd
+++ b/recipes/mushroom-buckwheat-risotto/index.qmd
@@ -23,8 +23,8 @@ Yet another Keto meal to try and distract you from the fact you're on a Keto die
 * 1/2 cup white wine
 * 1/3 cup dried shiitake mushrooms
 * 2 large portobello mushrooms
-* 2 tbsp thyme
-* 2 tbsp oregano
+* 2 tsp dried thyme
+* 2 tsp dried oregano
 * 1/2 cup chopped parsley
 * 2 tbsp olive oil
 * 1/3 cup grated parmesan
